# study-local-ai

./: .gitignore  README.md  cli.py  llm.py  loaders.py  prompts_config.json  pyproject.toml  requirements.txt  study.py  test_study.py  utils.py  vectorstore.py
tests/: test_load_pdf.py  test_study.py
